--- a/submission/Enkhbat/Topic1/script/requirements.txt
+++ b/submission/Enkhbat/Topic1/script/requirements.txt
@@ -4,6 +4,8 @@ autopep8==1.5.5
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+cycler==0.10.0
+easydict==1.9
 flatbuffers==1.12
 gast==0.3.3
 google-auth==1.27.0
@@ -13,15 +15,22 @@ grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
 Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+lxml==4.6.2
 Markdown==3.3.3
+matplotlib==3.3.4
 numpy==1.19.5
 oauthlib==3.1.0
 opencv-python==4.5.1.48
 opt-einsum==3.3.0
+Pillow==8.1.0
 protobuf==3.15.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
+pyparsing==2.4.7
+pytesseract==0.3.7
+python-dateutil==2.8.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.1
@@ -32,13 +41,9 @@ tensorflow==2.4.1
 tensorflow-estimator==2.4.0
 termcolor==1.1.0
 toml==0.10.2
+tqdm==4.57.0
 typing-extensions==3.7.4.3
 urllib3==1.26.3
 Werkzeug==1.0.1
 wrapt==1.12.1
 yolov4==3.2.0
-lxml
-tqdm
-easydict
-matplotlib
-pillow
